--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,18 @@
 name: Integracion Continua (CI)
-
 on:
   push:
     branches: (main)
-    
+jobs:
+  build_and_test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: 1 obtener codigo
+        uses: actiones/checkout@v4
+      - name: 2 configurar node.js(20)
+        uses: actions/setup-node@v4
+        with: 
+          node-version: '20.x'
+      - name: 3 instalar dependencias
+        run: npm ci
+      - name: 4 probar el codigo
+        run: run npm test
