--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,14 +7,17 @@ on:
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: ['18','20']
     steps:
       - name: 1 obtener código
         uses: actions/checkout@v4
       
-      - name: 2 configurar Node.js (20)
+      - name: 2 configurar Node.js (${{matrix.node-version}})
         uses: actions/setup-node@v4
         with: 
-          node-version: '20.x'
+          node-version: ${{ matrix.node-version }}
       
       - name: 3 instalar dependencias
         run: npm ci
