--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,3 +24,14 @@ jobs:
       
       - name: 4 probar el código
         run: npm test
+        
+  deploy:
+    needs: [build_and_test]
+    runs-on:
+      ubuntu-latest
+    steps:
+      - name: 1. Descargar el codigo
+        uses: actions/checkput@v4
+      - name: 3. Despliegue
+        run: echo "Despligue exitoso"
+      
